# intel-power-control

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  intel-power-control  intel-power-control-helper.c  intel-power-control-setup  intel-power-control.sudoers  pyproject.toml  setup.py
.github/workflows/: code-quality.yml  publish-to-test-pypi.yml
misc/: intel-power-control.desktop
